--- a/NumberGuessingGame(KuotM)/NumberGuessingGame(KuotM)/NumberGuessingGame(KuotM).csproj
+++ b/NumberGuessingGame(KuotM)/NumberGuessingGame(KuotM)/NumberGuessingGame(KuotM).csproj
@@ -45,14 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="NumberGuessingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="NumberGuessingForm.Designer.cs">
+      <DependentUpon>NumberGuessingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="NumberGuessing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="NumberGuessingForm.resx">
+      <DependentUpon>NumberGuessingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
