--- a/RandomNumber(KuotM)/RandomNumber(KuotM)/RandomNumber(KuotM).csproj
+++ b/RandomNumber(KuotM)/RandomNumber(KuotM)/RandomNumber(KuotM).csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="RandomNumberForm.resx">
       <DependentUpon>RandomNumberForm.cs</DependentUpon>
@@ -77,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ta Da.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\You lose.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
