--- a/ChocolateBoxes(KuotM)/ChocolateBoxes(KuotM)/ChocolateBoxes(KuotM).csproj
+++ b/ChocolateBoxes(KuotM)/ChocolateBoxes(KuotM)/ChocolateBoxes(KuotM).csproj
@@ -45,14 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ChocolateBoxesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ChocolateBoxesForm.Designer.cs">
+      <DependentUpon>ChocolateBoxesForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="ChocolateBoxes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ChocolateBoxesForm.resx">
+      <DependentUpon>ChocolateBoxesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
